--- a/sner/server/templates/storage/note/list.html
+++ b/sner/server/templates/storage/note/list.html
@@ -22,7 +22,7 @@
 			}),
 			Sner.dt.column('via_target', {'visible': JSON.parse(sessionStorage.getItem('dt_viatarget_column_visible'))}),
 			Sner.dt.column('xtype'),
-			Sner.dt.column('data', {'className': 'forcewrap'}),
+			Sner.dt.column('data', {'className': 'forcewrap', 'render': $.fn.dataTable.render.ellipsis(4096, false, true)}),
 			Sner.dt.column('tags', {'className': 'abutton_annotate_dt', 'render': function(data, type, row, meta) {return Sner.storage.hbs.tag_labels(row);}}),
 			Sner.dt.column('comment', {'className': 'abutton_annotate_dt forcewrap', 'title': 'cmnt'}),
 			Sner.dt.column_buttons(Sner.storage.hbs.note_controls)
