--- a/sner/server/templates/storage/vuln/multicopy.html
+++ b/sner/server/templates/storage/vuln/multicopy.html
@@ -7,6 +7,7 @@
 <script type="text/javascript">
 	var dt_vuln_multicopy_endpoints_table_options = {
 		'ajax': {'url': "{{ url_for('storage.vuln_multicopy_endpoints_json_route', **request.args) }}", 'method': 'POST'},
+		'processing': true,
 		'columns': [
 			Sner.dt.column_select(),
 			Sner.dt.column('endpoint_id', {'visible': false}),
