--- a/sner/server/templates/bootstrap_wtf.html
+++ b/sner/server/templates/bootstrap_wtf.html
@@ -19,6 +19,8 @@
 		{{ bootstrap_field_boolean(field, errors, horizontal) }}
 	{%- elif field.type == 'MultiCheckboxField' -%}
 		{{ bootstrap_field_common(field, label, placeholder, errors, horizontal, 'multiple_checkbox_field') }}
+	{%- elif field.type == 'RadioField' -%}
+		{{ bootstrap_field_radio(field, label, horizontal) }}
 	{%- else -%}
 		{{ field }}
 	{%- endif -%}
@@ -130,4 +132,39 @@
         {% set output = '<div class="%s">%s</div>'|safe % (form_group_classes, output) %}
 
 	{{ output }}
+{%- endmacro -%}
+
+{% macro bootstrap_field_radio(field, label=True, horizontal=False) %}
+	{%- set label_classes = False -%}
+	{%- set label_output = '' -%}
+	{%- set form_group_classes = 'form-group' -%}
+
+	{%- if label -%}
+		{%- if horizontal -%}
+			{%- set label_classes = 'col-sm-2 col-form-label' -%}
+		{%- endif -%}
+		{%- set label_output = field.label(class_=label_classes) -%}
+	{%- endif -%}
+
+	{%- if horizontal -%}
+		{% set form_group_classes = form_group_classes + ' row' %}
+	{%- endif -%}
+
+	{%- if field.flags.required -%}
+		{% set form_group_classes = form_group_classes + ' required' %}
+	{%- endif -%}
+
+	<div class='{{form_group_classes}}'>
+		{{label_output}}
+		<div {{'class=col-sm-10' if horizontal}}>
+			<ul class='form-control border-0 mb-0'>
+				{% for option in field %}
+					<li class='form-check form-check-inline'>
+						{{option(class_='form-check-input')}}
+						{{option.label(class_='form-check-label')}}
+					</li>
+				{% endfor %}
+			</ul>
+		</div>
+	</div>
 {%- endmacro -%}
