server: drop star from required radio options

--- a/sner/server/static/sner/sner.css
+++ b/sner/server/static/sner/sner.css
@@ -18,7 +18,7 @@ body {
 
 
 /* required items on forms */
-div.form-group.required label:after {
+div.form-group.required label:not(.form-check-label):after {
 	content:"*"; color:red;
 }
 
