--- a/sner/server/templates/storage/service/grouped.html
+++ b/sner/server/templates/storage/service/grouped.html
@@ -6,7 +6,7 @@
 {% block script %}
 <script type="text/javascript">
 	var dt_service_grouped_table_options = {
-		'ajax': {'url': "{{ url_for('storage.service_grouped_json_route', **request.args) | safe }}", 'method': 'POST'},
+		'ajax': {'url': "{{ url_for('storage.service_grouped_json_route', **request.args) }}", 'method': 'POST'},
 		'columns': [
 			Sner.dt.column('info', {'render': function(data, type, row, meta) { return Sner.storage.hbs.service_list_filter_info_link({'info': row['info'], 'info_encoded': encodeURIComponent(row['info'])}); }}),
 			Sner.dt.column('cnt_services')
