--- a/sner/server/templates/storage/vuln/list.html
+++ b/sner/server/templates/storage/vuln/list.html
@@ -6,7 +6,7 @@
 {% block script %}
 <script type="text/javascript">
 	var dt_vuln_list_table_options = {
-		'ajax': {'url': "{{ url_for('storage.vuln_list_json_route', **request.args) | safe }}", 'method': 'POST'},
+		'ajax': {'url': "{{ url_for('storage.vuln_list_json_route', **request.args) }}", 'method': 'POST'},
 		'columns': [
 			Sner.dt.column_select(),
 			Sner.dt.column('id', {'visible': false}),
