--- a/sner/server/templates/scheduler/queue/list.html
+++ b/sner/server/templates/scheduler/queue/list.html
@@ -6,7 +6,7 @@
 {% block script %}
 <script type="text/javascript">
 	var dt_queue_list_table_options = {
-		'ajax': {'url': "{{ url_for('scheduler.queue_list_json_route', **request.args) }}", 'method': 'POST'},
+		'ajax': {'url': Flask.url_for('scheduler.queue_list_json_route') + window.location.search, 'method': 'POST'},
 		'columns': [
 			Sner.dt.column('id'),
 			Sner.dt.column('name'),
