--- a/sner/server/templates/storage/host/list.html
+++ b/sner/server/templates/storage/host/list.html
@@ -6,7 +6,7 @@
 {% block script %}
 <script type="text/javascript">
 	var dt_host_list_table_options = {
-		'ajax': {'url': "{{ url_for('storage.host_list_json_route', **request.args) }}", 'method': 'POST'},
+		'ajax': {'url': Flask.url_for('storage.host_list_json_route') + window.location.search, 'method': 'POST'},
 		'columns': [
 			Sner.dt.column('id', {'visible': false}),
 			Sner.dt.column('address', {'render': function(data, type, row, meta) {return Sner.storage.hbs.host_link({'host_id': row['id'], 'host_address': row['address']});}}),
