--- a/sner/server/templates/storage/service/list.html
+++ b/sner/server/templates/storage/service/list.html
@@ -8,6 +8,7 @@
 	var dt_service_list_table_options = {
 		'ajax': {'url': Flask.url_for('storage.service_list_json_route') + window.location.search, 'method': 'POST'},
 		'columns': [
+			Sner.dt.column_select({'visible': JSON.parse(sessionStorage.getItem('dt_toolboxes_visible'))}),
 			Sner.dt.column('id', {'visible': false}),
 			Sner.dt.column('host_id', {'visible': false}),
 			Sner.dt.column('host_address', {'render': function(data, type, row, meta) { return Sner.storage.hbs.host_link(row); }}),
@@ -26,6 +27,7 @@
 			Sner.dt.column('comment', {'className': 'abutton_annotate_dt forcewrap', 'title': 'cmnt'}),
 			Sner.dt.column_buttons(Sner.storage.hbs.service_controls)
 		],
+		'select': JSON.parse(sessionStorage.getItem('dt_toolboxes_visible')) ? {'style': 'multi', 'selector': 'td:first-child'} : false,
 		'drawCallback': function (settings) {
 			Sner.dt.ajax_options['drawCallback'].call(this, settings); // call parent
 			this.find('td.abutton_annotate_dt').on('dblclick', {'dt': this.api(), 'route_name': 'storage.service_annotate_route'}, Sner.storage.action_annotate_dt);
@@ -33,6 +35,11 @@
 	};
 	$(document).ready(function() {
 		var dt_service_list_table = Sner.dt.init_datatable('#service_list_table', dt_service_list_table_options);
+		$('#service_list_table_toolbar .abutton_selectall').on('click', {'dt': dt_service_list_table}, Sner.dt.selectall);
+		$('#service_list_table_toolbar .abutton_selectnone').on('click', {'dt': dt_service_list_table}, Sner.dt.selectnone);
+		$('#service_list_table_toolbar .abutton_tag_multiid').on('click', {'dt': dt_service_list_table, 'route_name': 'storage.service_tag_multiid_route', 'action': 'set'}, Sner.storage.action_tag_multiid);
+		$('#service_list_table_toolbar .abutton_untag_multiid').on('click', {'dt': dt_service_list_table, 'route_name': 'storage.service_tag_multiid_route', 'action': 'unset'}, Sner.storage.action_tag_multiid);
+		$('#service_list_table_toolbar .abutton_delete_multiid').on('click', {'dt': dt_service_list_table, 'route_name': 'storage.service_delete_multiid_route'}, Sner.storage.action_delete_multiid);
 	});
 </script>
 {% endblock %}
@@ -45,6 +52,29 @@
 {% endcall %}
 
 <div id="service_list_table_toolbar" class="dt_toolbar">
+	<div class="dt_toolbar_toolbox" id="service_list_table_toolbox">
+		<div class="btn-group">
+			<a class="btn btn-outline-secondary disabled"><i class="fas fa-check-square"></i></a>
+			<a class="btn btn-outline-secondary abutton_selectall" href="#" title="select all">All</a>
+			<a class="btn btn-outline-secondary abutton_selectnone" href="#" title="unselect all">None</a>
+		</div>
+		<div class="btn-group">
+			<a class="btn btn-outline-secondary disabled"><i class="fas fa-tag"></i></a>
+			{{ cm.multiid_tagging_abuttons(config['SNER_TAGS_SERVICE'], 'btn btn-outline-secondary abutton_tag_multiid') }}
+		</div>
+		<div class="btn-group">
+			<div class="btn-group">
+				<a class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" href="#" title="remove tag dropdown"><i class="fas fa-remove-format"></i></a>
+				{{ cm.multiid_tagging_abuttons_dropdown(config['SNER_TAGS_SERVICE'], 'striked abutton_untag_multiid') }}
+			</div>
+			<a class="btn btn-outline-secondary abutton_delete_multiid" href="#"><i class="fas fa-trash text-danger"></i></a>
+		</div>
+		<div class="btn-group">
+			<a class="btn btn-outline-secondary disabled"><i class="fas fa-filter"></i></a>
+			<a class="btn btn-outline-secondary" href="{{ url_for('storage.service_list_route', filter='Service.tags not_any "reviewed"') }}">Exclude reviewed</a>
+			<a class="btn btn-outline-secondary" href="{{ url_for('storage.service_list_route', filter='Service.tags any "todo"') }}">Only Todo</a>
+		</div>
+	</div>
 	{{ cm.filter_form() }}
 </div>
 
