--- a/sner/server/templates/storage/note/list.html
+++ b/sner/server/templates/storage/note/list.html
@@ -56,7 +56,7 @@
 {% endcall %}
 
 <div id="note_list_table_toolbar" class="dt_toolbar">
-	<div class="dt_toolbar_toolbox" id="note_list_table_toolbox">
+	<div id="note_list_table_toolbox" class="dt_toolbar_toolbox">
 		<div class="btn-group">
 			<a class="btn btn-outline-secondary disabled"><i class="fas fa-check-square"></i></a>
 			<a class="btn btn-outline-secondary abutton_selectall" href="#" title="select all">All</a>
