--- a/sner/server/templates/storage/service/grouped.html
+++ b/sner/server/templates/storage/service/grouped.html
@@ -27,7 +27,7 @@
 {% endcall %}
 
 <div id="service_grouped_table_toolbar" class="dt_toolbar">
-	<div class="dt_toolbar_toolbox_alwaysvisible" id="service_grouped_table_toolbox">
+	<div id="service_grouped_table_toolbox" class="dt_toolbar_toolbox_alwaysvisible">
 		<div class="btn-group">
 			<a class="btn btn-outline-secondary disabled">crop at:</a>
 			{% for crop in [1, 2, 3, 4, 5] %}
