--- a/sner/server/templates/storage/vuln/list.html
+++ b/sner/server/templates/storage/vuln/list.html
@@ -59,7 +59,7 @@
 {% endcall %}
 
 <div id="vuln_list_table_toolbar" class="dt_toolbar">
-	<div class="dt_toolbar_toolbox_alwaysvisible" id="vuln_list_table_toolbox">
+	<div id="vuln_list_table_toolbox" class="dt_toolbar_toolbox_alwaysvisible">
 		<div class="btn-group">
 			<a class="btn btn-outline-secondary disabled"><i class="fas fa-check-square"></i></a>
 			<a class="btn btn-outline-secondary abutton_selectall" href="#" title="select all">All</a>
