--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -63,11 +63,11 @@
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top py-0">
 		<a class="navbar-brand" href="{{ url_for('index_route') }}"><img src="{{ url_for('static', filename='logo.png') }}"></a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_main">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 
-		<div class="collapse navbar-collapse" id="navbarsExampleDefault">
+		<div id="navbar_main" class="collapse navbar-collapse">
 			<ul class="navbar-nav mr-auto">
 			{% if current_user.is_authenticated %}
 				{%- set active_subsystem = request.endpoint.split('.')[0] -%}
@@ -116,7 +116,7 @@
 				<li class="nav-item"><a class="nav-link" href="{{ url_for('auth.login_route') }}">Login</a></li>
 			{% else %}
 				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="dropdownUser" data-toggle="dropdown">{{ current_user.username }}</a>
+					<a id="dropdownUser" class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">{{ current_user.username }}</a>
 					<div class="dropdown-menu dropdown-menu-right">
 					{% if current_user.has_role('admin') %}
 						<a class="dropdown-item" href="{{ url_for('auth.user_list_route') }}">Manage users</a>
