--- a/sner/server/templates/scheduler/job/list.html
+++ b/sner/server/templates/scheduler/job/list.html
@@ -34,7 +34,7 @@
 {% call cm.heading(['Jobs']) %}{% endcall %}
 
 <div id="job_list_table_toolbar" class="dt_toolbar">
-	<div class="dt_toolbar_toolbox_alwaysvisible" id="job_list_table_toolbox">
+	<div id="job_list_table_toolbox" class="dt_toolbar_toolbox_alwaysvisible">
 		<div class="btn-group">
 			<a class="btn btn-outline-secondary disabled"><i class="fas fa-filter"></i></a>
 			<a class="btn btn-outline-secondary" href="{{ url_for('scheduler.job_list_route', filter='Job.retval is_null ""') }}">Running</a>
