--- a/sner/server/templates/storage/host/list.html
+++ b/sner/server/templates/storage/host/list.html
@@ -46,7 +46,7 @@
 {% endcall %}
 
 <div id="host_list_table_toolbar" class="dt_toolbar">
-	<div class="dt_toolbar_toolbox" id="host_list_table_toolbox">
+	<div id="host_list_table_toolbox" class="dt_toolbar_toolbox">
 		<div class="btn-group">
 			<a class="btn btn-outline-secondary disabled"><i class="fas fa-check-square"></i></a>
 			<a class="btn btn-outline-secondary abutton_selectall" href="#" title="select all">All</a>
