--- a/sner/server/templates/storage/service/addedit.html
+++ b/sner/server/templates/storage/service/addedit.html
@@ -13,7 +13,7 @@
 		<label class="col-sm-2 col-form-label"><a data-toggle="collapse" href="#refs_collapse">Host</a></label>
 		<div class="col-sm-10"><div class="form-control-plaintext">{{ host.address }} ({{ host.hostname }})</div></div>
 	</div>
-	<div class="collapse" id="refs_collapse">
+	<div id="refs_collapse" class="collapse">
 		{{ bwtf.bootstrap_field(form.host_id, horizontal=True) }}
 	</div>
 	{{ bwtf.bootstrap_field(form.proto, horizontal=True) }}
