--- a/sner/server/templates/storage/vuln/addedit.html
+++ b/sner/server/templates/storage/vuln/addedit.html
@@ -46,7 +46,7 @@
 		<label class="col-sm-2 col-form-label"><a data-toggle="collapse" href="#refs_collapse">Host, Service</a></label>
 		<div class="col-sm-10"><div class="form-control-plaintext">{{ host.address }} ({{ host.hostname }}){% if service %} {{ service.port }}/{{ service.proto }}{% endif %}</div></div>
 	</div>
-	<div class="collapse" id="refs_collapse">
+	<div id="refs_collapse" class="collapse">
 		{{ bwtf.bootstrap_field(form.host_id, horizontal=True) }}
 		{{ bwtf.bootstrap_field(form.service_id, horizontal=True) }}
 		{{ bwtf.bootstrap_field(form.via_target, horizontal=True) }}
