--- a/sner/server/templates/visuals/portmap.html
+++ b/sner/server/templates/visuals/portmap.html
@@ -51,7 +51,7 @@ table.borderless tbody tr td { border: none; }
 	<h5 class="card-header">
 		<a data-toggle="collapse" href="#portstates">Services port states</a>
 	</h5>
-	<div class="card-body collapse" id="portstates">
+	<div id="portstates" class="card-body collapse">
 		<table class="dt_static table table-condensed table-hover">
 			<thead>
 				<tr>
@@ -86,6 +86,6 @@ table.borderless tbody tr td { border: none; }
 		<a class="portmap_item" href="{{ url_for('storage.service_list_route', filter='Service.port=="%s"'|format(tmp['port'])) }}" style="font-size: {{ tmp['size'] }}px" data-port="{{ tmp['port'] }}">{{ tmp['port'] }}</a>&nbsp;
 		{% endfor %}
 	</div>
-	<div class="col-md-6" id="port_detail"></div>
+	<div id="port_detail" class="col-md-6"></div>
 </div>
 {% endblock %}
