--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -101,10 +101,11 @@
 					<a class="btn btn-outline-secondary abutton_selectnone" href="#">None</a>
 				</div>
 				<div class="btn-group">
-					<a class="btn btn-outline-secondary disabled"><i class="fas fa-tag"></i></a>
+					<a class="btn btn-outline-secondary abutton_freetag_set_multiid" href="#"><i class="fas fa-tag"></i></a>
 					{{ cm.multiid_tagging_abuttons(config['SNER_TAGS_SERVICE'], 'btn btn-outline-secondary abutton_tag_multiid') }}
 				</div>
 				<div class="btn-group">
+					<a class="btn btn-outline-secondary abutton_freetag_unset_multiid" href="#"><i class="fas fa-eraser"></i></a>
 					<div class="btn-group">
 						<a class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" href="#" title="remove tag dropdown"><i class="fas fa-remove-format"></i></a>
 						{{ cm.multiid_tagging_abuttons_dropdown(config['SNER_TAGS_SERVICE'], 'striked abutton_untag_multiid') }}
@@ -151,6 +152,8 @@
 				$('#host_view_service_table_toolbar .abutton_tag_multiid').on('click', {'dt': dt_host_view_service_table, 'route_name': 'storage.service_tag_multiid_route', 'action': 'set'}, Sner.storage.action_tag_multiid);
 				$('#host_view_service_table_toolbar .abutton_untag_multiid').on('click', {'dt': dt_host_view_service_table, 'route_name': 'storage.service_tag_multiid_route', 'action': 'unset'}, Sner.storage.action_tag_multiid);
 				$('#host_view_service_table_toolbar .abutton_delete_multiid').on('click', {'dt': dt_host_view_service_table, 'route_name': 'storage.service_delete_multiid_route'}, Sner.storage.action_delete_multiid);
+				$('#host_view_service_table_toolbar .abutton_freetag_set_multiid').on('click', {'dt': dt_host_view_service_table, 'route_name': 'storage.service_tag_multiid_route', 'action': 'set'}, Sner.storage.action_freetag_multiid);
+				$('#host_view_service_table_toolbar .abutton_freetag_unset_multiid').on('click', {'dt': dt_host_view_service_table, 'route_name': 'storage.service_tag_multiid_route', 'action': 'unset'}, Sner.storage.action_freetag_multiid);
 			});
 		</script>
 	</div>
@@ -164,10 +167,11 @@
 					<a class="btn btn-outline-secondary abutton_selectnone" href="#">None</a>
 				</div>
 				<div class="btn-group">
-					<a class="btn btn-outline-secondary disabled"><i class="fas fa-tag"></i></a>
+					<a class="btn btn-outline-secondary abutton_freetag_set_multiid" href="#"><i class="fas fa-tag"></i></a>
 					{{ cm.multiid_tagging_abuttons(config['SNER_TAGS_VULN'], 'btn btn-outline-secondary abutton_tag_multiid') }}
 				</div>
 				<div class="btn-group">
+					<a class="btn btn-outline-secondary abutton_freetag_unset_multiid" href="#"><i class="fas fa-eraser"></i></a>
 					<div class="btn-group">
 						<a class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" href="#" title="remove tag dropdown"><i class="fas fa-remove-format"></i></a>
 						{{ cm.multiid_tagging_abuttons_dropdown(config['SNER_TAGS_VULN'], 'striked abutton_untag_multiid') }}
@@ -217,6 +221,8 @@
 				$('#host_view_vuln_table_toolbar .abutton_tag_multiid').on('click', {'dt': dt_host_view_vuln_table, 'route_name': 'storage.vuln_tag_multiid_route', 'action': 'set'}, Sner.storage.action_tag_multiid);
 				$('#host_view_vuln_table_toolbar .abutton_untag_multiid').on('click', {'dt': dt_host_view_vuln_table, 'route_name': 'storage.vuln_tag_multiid_route', 'action': 'unset'}, Sner.storage.action_tag_multiid);
 				$('#host_view_vuln_table_toolbar .abutton_delete_multiid').on('click', {'dt': dt_host_view_vuln_table, 'route_name': 'storage.vuln_delete_multiid_route'}, Sner.storage.action_delete_multiid);
+				$('#host_view_vuln_table_toolbar .abutton_freetag_set_multiid').on('click', {'dt': dt_host_view_vuln_table, 'route_name': 'storage.vuln_tag_multiid_route', 'action': 'set'}, Sner.storage.action_freetag_multiid);
+				$('#host_view_vuln_table_toolbar .abutton_freetag_unset_multiid').on('click', {'dt': dt_host_view_vuln_table, 'route_name': 'storage.vuln_tag_multiid_route', 'action': 'unset'}, Sner.storage.action_freetag_multiid);
 			});
 		</script>
 	</div>
@@ -230,10 +236,11 @@
 					<a class="btn btn-outline-secondary abutton_selectnone" href="#">None</a>
 				</div>
 				<div class="btn-group">
-					<a class="btn btn-outline-secondary disabled"><i class="fas fa-tag"></i></a>
+					<a class="btn btn-outline-secondary abutton_freetag_set_multiid" href="#"><i class="fas fa-tag"></i></a>
 					{{ cm.multiid_tagging_abuttons(config['SNER_TAGS_NOTE'], 'btn btn-outline-secondary abutton_tag_multiid') }}
 				</div>
 				<div class="btn-group">
+					<a class="btn btn-outline-secondary abutton_freetag_unset_multiid" href="#"><i class="fas fa-eraser"></i></a>
 					<div class="btn-group">
 						<a class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" href="#" title="remove tag dropdown"><i class="fas fa-remove-format"></i></a>
 						{{ cm.multiid_tagging_abuttons_dropdown(config['SNER_TAGS_NOTE'], 'striked abutton_untag_multiid') }}
@@ -281,6 +288,8 @@
 				$('#host_view_note_table_toolbar .abutton_tag_multiid').on('click', {'dt': dt_host_view_note_table, 'route_name': 'storage.note_tag_multiid_route', 'action': 'set'}, Sner.storage.action_tag_multiid);
 				$('#host_view_note_table_toolbar .abutton_untag_multiid').on('click', {'dt': dt_host_view_note_table, 'route_name': 'storage.note_tag_multiid_route', 'action': 'unset'}, Sner.storage.action_tag_multiid);
 				$('#host_view_note_table_toolbar .abutton_delete_multiid').on('click', {'dt': dt_host_view_note_table, 'route_name': 'storage.note_delete_multiid_route'}, Sner.storage.action_delete_multiid);
+				$('#host_view_note_table_toolbar .abutton_freetag_set_multiid').on('click', {'dt': dt_host_view_note_table, 'route_name': 'storage.note_tag_multiid_route', 'action': 'set'}, Sner.storage.action_freetag_multiid);
+				$('#host_view_note_table_toolbar .abutton_freetag_unset_multiid').on('click', {'dt': dt_host_view_note_table, 'route_name': 'storage.note_tag_multiid_route', 'action': 'unset'}, Sner.storage.action_freetag_multiid);
 			});
 		</script>
 	</div>
