--- a/sner/server/templates/storage/service/list.html
+++ b/sner/server/templates/storage/service/list.html
@@ -40,6 +40,8 @@
 		$('#service_list_table_toolbar .abutton_tag_multiid').on('click', {'dt': dt_service_list_table, 'route_name': 'storage.service_tag_multiid_route', 'action': 'set'}, Sner.storage.action_tag_multiid);
 		$('#service_list_table_toolbar .abutton_untag_multiid').on('click', {'dt': dt_service_list_table, 'route_name': 'storage.service_tag_multiid_route', 'action': 'unset'}, Sner.storage.action_tag_multiid);
 		$('#service_list_table_toolbar .abutton_delete_multiid').on('click', {'dt': dt_service_list_table, 'route_name': 'storage.service_delete_multiid_route'}, Sner.storage.action_delete_multiid);
+		$('#service_list_table_toolbar .abutton_freetag_set_multiid').on('click', {'dt': dt_service_list_table, 'route_name': 'storage.service_tag_multiid_route', 'action': 'set'}, Sner.storage.action_freetag_multiid);
+		$('#service_list_table_toolbar .abutton_freetag_unset_multiid').on('click', {'dt': dt_service_list_table, 'route_name': 'storage.service_tag_multiid_route', 'action': 'unset'}, Sner.storage.action_freetag_multiid);
 	});
 </script>
 {% endblock %}
@@ -59,10 +61,11 @@
 			<a class="btn btn-outline-secondary abutton_selectnone" href="#" title="unselect all">None</a>
 		</div>
 		<div class="btn-group">
-			<a class="btn btn-outline-secondary disabled"><i class="fas fa-tag"></i></a>
+			<a class="btn btn-outline-secondary abutton_freetag_set_multiid" href="#"><i class="fas fa-tag"></i></a>
 			{{ cm.multiid_tagging_abuttons(config['SNER_TAGS_SERVICE'], 'btn btn-outline-secondary abutton_tag_multiid') }}
 		</div>
 		<div class="btn-group">
+			<a class="btn btn-outline-secondary abutton_freetag_unset_multiid" href="#"><i class="fas fa-eraser"></i></a>
 			<div class="btn-group">
 				<a class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" href="#" title="remove tag dropdown"><i class="fas fa-remove-format"></i></a>
 				{{ cm.multiid_tagging_abuttons_dropdown(config['SNER_TAGS_SERVICE'], 'striked abutton_untag_multiid') }}
