--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -86,13 +86,13 @@
 </table>
 
 <ul id="host_view_tabs" class="nav nav-tabs">
-	<li class="nav-item"><a class="nav-link" href="#services" data-toggle="tab">Services <span class="badge badge-pill badge-secondary">{{ host.services|length }}</span></a></li>
-	<li class="nav-item"><a class="nav-link" href="#vulns" data-toggle="tab">Vulns <span class="badge badge-pill badge-secondary">{{ host.vulns|length }}</span></a></li>
-	<li class="nav-item"><a class="nav-link" href="#notes" data-toggle="tab">Notes <span class="badge badge-pill badge-secondary">{{ host.notes|length }}</span></a></li>
+	<li class="nav-item"><a class="nav-link" href="#host_view_service_tab" data-toggle="tab">Services <span class="badge badge-pill badge-secondary">{{ host.services|length }}</span></a></li>
+	<li class="nav-item"><a class="nav-link" href="#host_view_vuln_tab" data-toggle="tab">Vulns <span class="badge badge-pill badge-secondary">{{ host.vulns|length }}</span></a></li>
+	<li class="nav-item"><a class="nav-link" href="#host_view_note_tab" data-toggle="tab">Notes <span class="badge badge-pill badge-secondary">{{ host.notes|length }}</span></a></li>
 </ul>
 
 <div class="tab-content">
-	<div id="services" class="tab-pane">
+	<div id="host_view_service_tab" class="tab-pane">
 		<div id="host_view_service_table_toolbar" class="dt_toolbar">
 			<div id="host_view_service_table_toolbox" class="dt_toolbar_toolbox">
 				<div class="btn-group">
@@ -158,7 +158,7 @@
 		</script>
 	</div>
 
-	<div id="vulns" class="tab-pane">
+	<div id="host_view_vuln_tab" class="tab-pane">
 		<div id="host_view_vuln_table_toolbar" class="dt_toolbar">
 			<div id="host_view_vuln_table_toolbox" class="dt_toolbar_toolbox_alwaysvisible">
 				<div class="btn-group">
@@ -227,7 +227,7 @@
 		</script>
 	</div>
 
-	<div id="notes" class="tab-pane">
+	<div id="host_view_note_tab" class="tab-pane">
 		<div id="host_view_note_table_toolbar" class="dt_toolbar">
 			<div id="host_view_note_table_toolbox" class="dt_toolbar_toolbox">
 				<div class="btn-group">
